# foo_bar_dune

./: dune-project  tata.opam  toto.opam
lib/: dune
