opam-version: "2.0"
name:         "tata"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/toto"
bug-reports:  "https://github.com/mirage/toto/issues"
dev-repo:     "git+https://github.com/mirage/toto.git"
doc:          "https://mirage.github.io/toto/"
license:      "MIT"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.0.0"}
]
